<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:background="@color/background_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/fragment_login_title"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/fragment_login_email_ask"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etInputMail"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/fragment_login_email_input"
        android:typeface="serif"
        android:inputType="textEmailAddress"
        android:text=""
        android:textSize="20sp"
        android:background="@drawable/textview_border"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvMail" />

    <ImageView
        android:id="@+id/ivMailLogin"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="mail"
        android:src="@drawable/mail"
        app:layout_constraintBottom_toBottomOf="@+id/etInputMail"
        app:layout_constraintEnd_toEndOf="@+id/etInputMail"
        app:layout_constraintTop_toTopOf="@+id/etInputMail" />


    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/fragment_login_password_ask"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/etInputMail" />

    <EditText
        android:id="@+id/etInputPassword"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/fragment_login_password_input"
        android:inputType="numberPassword"
        android:text=""
        android:textSize="20sp"
        android:typeface="serif"
        android:background="@drawable/textview_border"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <ImageView
        android:id="@+id/ivPasswordLogin"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="password"
        android:src="@drawable/key"
        app:layout_constraintBottom_toBottomOf="@+id/etInputPassword"
        app:layout_constraintEnd_toEndOf="@+id/etInputPassword"
        app:layout_constraintTop_toTopOf="@+id/etInputPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:text="@string/fragment_login_btn_login"
        android:typeface="serif"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/blue"
        android:text="@string/fragment_login_btn_register"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

</androidx.constraintlayout.widget.ConstraintLayout>