<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".fragments.NewUserFragment">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/fragment_new_user_title"
        android:typeface="serif"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lUserName"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:hint="@string/fragment_new_user_name_input"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserName"
            android:textSize="20sp"
            android:typeface="serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/ivUser"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="user"
        android:src="@drawable/user"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="@+id/lUserName"
        app:layout_constraintTop_toTopOf="@+id/lUserName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lUserEmail"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/fragment_new_user_email_input"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/lUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserEmail"
            android:textSize="20sp"
            android:typeface="serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ivMail"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="mail"
        android:src="@drawable/mail"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/lUserEmail"
        app:layout_constraintTop_toTopOf="@+id/lUserEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lUserPassword"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/fragment_new_user_password_input"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/lUserEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserPassword"
            android:textSize="20sp"
            android:typeface="serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ivPassword"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:translationZ="1dp"
        android:contentDescription="key"
        android:src="@drawable/key"
        app:layout_constraintEnd_toEndOf="@+id/lUserPassword"
        app:layout_constraintTop_toTopOf="@+id/lUserPassword" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/blue"
        android:text="@string/fragment_new_user_btn_save"
        android:typeface="serif"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

</androidx.constraintlayout.widget.ConstraintLayout>