<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <ImageView
        android:id="@+id/ivEdit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:contentDescription="edit"
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/tvUserTitle"
        app:layout_constraintStart_toEndOf="@+id/tvUserTitle"
        app:layout_constraintTop_toTopOf="@+id/tvUserTitle" />

    <TextView
        android:id="@+id/tvUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fragment_user_title"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Nombre"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvUserTitle" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Nombre Editado"
        android:textColor="@color/gray"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivUser"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/ivUser" />

    <ImageView
        android:id="@+id/ivUser"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="user"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@+id/tvUserName"
        app:layout_constraintEnd_toStartOf="@+id/tvUserName"
        app:layout_constraintTop_toTopOf="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Mail"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <EditText
        android:id="@+id/etUserEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Mail Editado"
        android:textColor="@color/gray"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivMail"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/ivMail" />

    <ImageView
        android:id="@+id/ivMail"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="mail"
        android:src="@drawable/mail"
        app:layout_constraintBottom_toBottomOf="@+id/tvUserEmail"
        app:layout_constraintEnd_toStartOf="@+id/tvUserEmail"
        app:layout_constraintTop_toTopOf="@+id/tvUserEmail" />

    <TextView
        android:id="@+id/tvUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Clave"
        android:textColor="@color/black"
        android:inputType="numberPassword"
        android:textSize="25dp"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvUserEmail" />

    <EditText
        android:id="@+id/etUserPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Clave Editada"
        android:textColor="@color/gray"
        android:inputType="numberPassword"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivPassword"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/ivPassword" />

    <ImageView
        android:id="@+id/ivPassword"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="key"
        android:src="@drawable/key"
        app:layout_constraintBottom_toBottomOf="@+id/tvUserPassword"
        app:layout_constraintEnd_toStartOf="@+id/tvUserPassword"
        app:layout_constraintTop_toTopOf="@+id/tvUserPassword" />

    <Button
        android:id="@+id/btnSignOff"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/fragment_user_sign_off"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDeleteUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/red"
        android:text="@string/fragment_user_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/fragment_user_save"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancelChanges"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/red"
        android:text="@string/fragment_user_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>